--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "packageManager": "pnpm@10.9.0",
   "engines": {
     "node": "22.11.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.3"
   }
 }
