--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "globals": "^16.0.0",
     "lint-staged": "^15.5.1",
     "prettier": "^3.5.3",
-    "typescript-eslint": "^8.31.0"
+    "typescript-eslint": "^8.31.0",
+    "nx": "20.8.1",
+    "@nx/eslint": "20.8.1"
   },
   "lint-staged": {
     "**/*.{js,ts,tsx}": [
