chore: add custom taskrunner for caching

--- a/nx.json
+++ b/nx.json
@@ -21,5 +21,14 @@
         "watchDepsTargetName": "watch-deps"
       }
     }
-  ]
+  ],
+  "tasksRunnerOptions": {
+    "default": {
+      "runner": "@pellegrims/nx-remotecache-s3",
+      "options": {
+        "bucket": "ks-fiksfrontendcache",
+        "region": "eu-north-1"
+      }
+    }
+  }
 }
