--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "engines": {
     "node": "22.11.0"
   },
+  "dependencies": {},
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
