--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "engines": {
     "node": "22.11.0"
   },
-  "dependencies": {},
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@nx/eslint": "20.8.1",
+    "@nx/eslint-plugin": "^20.8.1",
     "@nx/js": "20.8.1",
     "@nx/vite": "20.8.1",
     "@nx/web": "20.8.1",
@@ -27,13 +27,17 @@
     "@types/node": "18.16.9",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
-    "eslint": "^9.25.1",
+    "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.1",
+    "eslint-plugin-playwright": "^1.6.2",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "5.0.0",
     "globals": "^16.0.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
-    "jsonc-eslint-parser": "^2.1.0",
     "lint-staged": "^15.5.1",
     "nx": "20.8.1",
     "prettier": "^3.5.3",
