--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -6,8 +6,16 @@
   "type": "module",
   "main": "./index.js",
   "types": "./index.d.ts",
-  "devDependencies": {
+  "dependencies": {
     "@digdir/designsystemet-css": "1.0.5",
     "@digdir/designsystemet-react": "1.0.5"
+  },
+  "devDependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "peerDependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
