--- a/packages/react/project.json
+++ b/packages/react/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "react",
+  "name": "@ks-no/designsystem-react",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/react/src",
   "projectType": "library",
