--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,8 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "react": ["packages/react/src/index.ts"],
-      "themes": ["packages/themes/src/index.ts"]
+      "@ks-no/designsystem-react": ["packages/react/src/index.ts"],
+      "@ks-no/designsystem-themes": ["packages/themes/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp", "dist"]
