--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -3,7 +3,12 @@
   "version": "0.0.0-semantically-released",
   "license": "MIT",
   "type": "module",
-  "main": "./index.js",
-  "types": "./index.d.ts",
-  "dependencies": {}
+  "exports": {
+    "./base.css": "./src/base.css",
+    "./ledsagerbevis.css": "./src/built/ledsagerbevis.css"
+  },
+  "files": [
+    "src"
+  ],
+  "peerDependencies": {}
 }
