--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,34 +19,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Fetches all history so `main` exists locally
+          fetch-depth: 0
       - uses: ./.github/actions/install-packages
       - name: Lint
         run: pnpm nx affected --t lint
-
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/install-packages
       - name: Build
         run: pnpm nx affected --t build
-
-  unit:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/install-packages
       - name: Test
         run: pnpm nx affected --t test
-
-  e2e:
-    runs-on: ubuntu-latest
-    needs:
-      - build
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/install-packages
       - name: Install Playwright
         run: npx playwright install --with-deps
       - name: End-to-end test
