--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build
         run: pnpm nx affected --t build
       - name: Test
-        run: pnpm nx affected --t test
+        run: pnpm nx affected --t test --passWithNoTests
       - name: Install Playwright
         run: npx playwright install --with-deps
       - name: End-to-end test
