--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,32 +1,55 @@
-name: ci
+name: CI
 
 on:
   push:
-    branches:
-      - main
-  pull_request: {}
-
-env:
-  NXCACHE_S3_BUCKET: ${{ secrets.NXCACHE_S3_BUCKET }}
-  NXCACHE_S3_REGION: ${{ secrets.NXCACHE_S3_REGION }}
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    branches: [main]
+  pull_request:
 
 jobs:
   ci:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: ./.github/actions/install-packages
+
+      - name: Install
+        uses: ./.github/actions/install-packages
+
       - name: Lint
-        run: pnpm nx affected --t lint --base=main --head=HEAD
+        run: pnpm nx affected --target=lint --base=main --head=HEAD
+
       - name: Build
-        run: pnpm nx affected --t build --base=main --head=HEAD
+        run: pnpm nx affected --target=build --base=main --head=HEAD
+
       - name: Test
-        run: pnpm nx affected --t test --base=main --head=HEAD --passWithNoTests
+        run: pnpm nx affected --target=test --base=main --head=HEAD --passWithNoTests
+
+      - name: Check if E2E is affected
+        id: e2e_check
+        run: |
+          AFFECTED_E2E=$(pnpm nx show projects --affected --target=e2e --base=main --head=HEAD)
+          if [ -n "$AFFECTED_E2E" ]; then
+            echo "e2e_changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "e2e_changed=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Cache Playwright
+        if: steps.e2e_check.outputs.e2e_changed == 'true'
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/ms-playwright
+          key: playwright-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}
+          restore-keys: |
+            playwright-${{ runner.os }}-
+
       - name: Install Playwright
+        if: steps.e2e_check.outputs.e2e_changed == 'true'
         run: npx playwright install --with-deps
+
       - name: End-to-end test
-        run: pnpm nx affected --t=e2e --base=main --head=HEAD
+        if: steps.e2e_check.outputs.e2e_changed == 'true'
+        run: pnpm nx affected --target=e2e --base=main --head=HEAD
