--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,12 @@ on:
     branches: [main]
   pull_request:
 
+env:
+  NXCACHE_S3_BUCKET: ${{ secrets.NXCACHE_S3_BUCKET }}
+  NXCACHE_S3_REGION: ${{ secrets.NXCACHE_S3_REGION }}
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
 jobs:
   ci:
     runs-on: ubuntu-latest
