ci: specify cacheable operations

--- a/nx.json
+++ b/nx.json
@@ -41,7 +41,10 @@
   ],
   "tasksRunnerOptions": {
     "default": {
-      "runner": "@pellegrims/nx-remotecache-s3"
+      "runner": "@pellegrims/nx-remotecache-s3",
+      "options": {
+        "cacheableOperations": ["build", "test", "lint", "e2e"]
+      }
     }
   },
   "targetDefaults": {
