chore: init nx release

--- a/nx.json
+++ b/nx.json
@@ -55,6 +55,11 @@
     },
     "e2e-ci--**/**": {
       "dependsOn": ["^build"]
+    },
+    "lint": {
+      "options": {
+        "max-warnings": 0
+      }
     }
   },
   "generators": {
@@ -71,6 +76,29 @@
       "library": {
         "style": "css",
         "linter": "eslint"
+      }
+    }
+  },
+  "release": {
+    "projectsRelationship": "independent",
+    "projects": ["@ks-no/designsystem-theme", "@ks-no/designsystem-react"],
+    "changelog": {
+      "projectChangelogs": {
+        "renderOptions": {
+          "authors": true,
+          "commitReferences": true,
+          "versionTitleDate": true,
+          "applyUsernameToAuthors": true
+        }
+      },
+      "workspaceChangelog": {
+        "createRelease": "github",
+        "renderOptions": {
+          "authors": true,
+          "commitReferences": true,
+          "versionTitleDate": true,
+          "applyUsernameToAuthors": true
+        }
       }
     }
   }
