chore(release): publish 0.0.1-alpha.0

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ks-utvikling/designsystem-react",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "license": "MIT",
   "private": true,
   "type": "module",
