--- a/.github/actions/install-packages/action.yml
+++ b/.github/actions/install-packages/action.yml
@@ -10,6 +10,7 @@ runs:
       with:
         node-version-file: 'package.json'
         cache: 'pnpm'
+        registry-url: https://npm.pkg.github.com/
     - run: pnpm --version
       shell: bash
     - run: pnpm install --frozen-lockfile --prefer-offline
