--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,7 @@
   "name": "@ks-utvikling/designsystem-react",
   "version": "0.0.1-alpha.0",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "type": "module",
   "main": "./index.js",
   "types": "./index.d.ts",
