--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,10 @@
 {
   "name": "@ks-utvikling/designsystem-react",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ks-no/designsystem.git",
+    "directory": "packages/react"
+  },
   "version": "0.0.1-alpha.0",
   "license": "MIT",
   "private": false,
