fix(react): adjust build configuration, set `packageRoot` for publish

--- a/packages/react/project.json
+++ b/packages/react/project.json
@@ -4,5 +4,11 @@
   "sourceRoot": "packages/react/src",
   "projectType": "library",
   "tags": [],
-  "targets": {}
+  "targets": {
+    "nx-release-publish": {
+      "options": {
+        "packageRoot": "{projectRoot}/dist"
+      }
+    }
+  }
 }
