--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
       "eslint --fix"
     ],
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "dependencies": {
+    "@vitejs/plugin-react-swc": "^3.9.0"
   }
 }
