--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -12,14 +12,25 @@
     "access": "public"
   },
   "type": "module",
-  "main": "./index.js",
-  "types": "./index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    }
+  },
+  "files": [
+    "./dist"
+  ],
   "dependencies": {
     "@digdir/designsystemet-css": "1.0.5",
-    "@digdir/designsystemet-react": "1.0.5"
+    "@digdir/designsystemet-react": "1.0.5",
+    "@navikt/aksel-icons": "^7.21.1"
   },
   "peerDependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": ">=18.3.1",
+    "react-dom": ">=18.3.1"
   }
 }
