ci: try to remove the nx-release-publish-target

--- a/packages/react/project.json
+++ b/packages/react/project.json
@@ -4,11 +4,5 @@
   "sourceRoot": "packages/react/src",
   "projectType": "library",
   "tags": [],
-  "targets": {
-    "nx-release-publish": {
-      "options": {
-        "packageRoot": "{projectRoot}/dist"
-      }
-    }
-  }
+  "targets": {}
 }
