--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,6 +6,12 @@ on:
       - v*.*.*
   workflow_dispatch:
 
+env:
+  NXCACHE_S3_BUCKET: ${{ secrets.NXCACHE_S3_BUCKET }}
+  NXCACHE_S3_REGION: ${{ secrets.NXCACHE_S3_REGION }}
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
 jobs:
   test:
     name: Publish
@@ -26,6 +32,10 @@ jobs:
 
       - name: Print Environment Info
         run: npx nx report
+        shell: bash
+
+      - name: Build packages
+        run: pnpm nx run @ks-digital/designsystem-react:build
         shell: bash
 
       - name: Publish packages
