--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "node": "22.11.0"
   },
   "devDependencies": {
+    "@angular-devkit/core": "~19.2.0",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
+    "@nx/angular": "20.8.1",
     "@nx/devkit": "20.8.1",
     "@nx/eslint": "20.8.1",
     "@nx/eslint-plugin": "^20.8.1",
