chore: init angular lib

--- a/nx.json
+++ b/nx.json
@@ -95,6 +95,13 @@
         "style": "css",
         "linter": "eslint"
       }
+    },
+    "@nx/angular:library": {
+      "linter": "eslint",
+      "unitTestRunner": "vitest"
+    },
+    "@nx/angular:component": {
+      "style": "css"
     }
   }
 }
