--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "node": "22.11.0"
   },
   "devDependencies": {
+    "@analogjs/vite-plugin-angular": "~1.14.1",
+    "@analogjs/vitest-angular": "~1.14.1",
+    "@angular-devkit/build-angular": "~19.2.0",
     "@angular-devkit/core": "~19.2.0",
+    "@angular-devkit/schematics": "~19.2.0",
+    "@angular/cli": "~19.2.0",
+    "@angular/compiler-cli": "~19.2.0",
+    "@angular/language-service": "~19.2.0",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@nx/angular": "20.8.1",
@@ -25,6 +32,7 @@
     "@nx/web": "20.8.1",
     "@pellegrims/nx-remotecache-s3": "^8.1.0",
     "@playwright/test": "^1.36.0",
+    "@schematics/angular": "~19.2.0",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
@@ -34,9 +42,11 @@
     "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "@typescript-eslint/utils": "^8.19.0",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
+    "angular-eslint": "^19.2.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "2.31.0",
@@ -65,6 +75,15 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@vitejs/plugin-react-swc": "^3.9.0"
+    "@angular/common": "~19.2.0",
+    "@angular/compiler": "~19.2.0",
+    "@angular/core": "~19.2.0",
+    "@angular/forms": "~19.2.0",
+    "@angular/platform-browser": "~19.2.0",
+    "@angular/platform-browser-dynamic": "~19.2.0",
+    "@angular/router": "~19.2.0",
+    "@vitejs/plugin-react-swc": "^3.9.0",
+    "rxjs": "~7.8.0",
+    "zone.js": "~0.15.0"
   }
 }
