chore: wip deps

--- a/package.json
+++ b/package.json
@@ -13,12 +13,6 @@
   "devDependencies": {
     "@analogjs/vite-plugin-angular": "~1.14.1",
     "@analogjs/vitest-angular": "~1.14.1",
-    "@angular-devkit/build-angular": "~19.2.0",
-    "@angular-devkit/core": "~19.2.0",
-    "@angular-devkit/schematics": "~19.2.0",
-    "@angular/cli": "~19.2.0",
-    "@angular/compiler-cli": "~19.2.0",
-    "@angular/language-service": "~19.2.0",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@nx/angular": "20.8.1",
@@ -32,7 +26,7 @@
     "@nx/web": "20.8.1",
     "@pellegrims/nx-remotecache-s3": "^8.1.0",
     "@playwright/test": "^1.36.0",
-    "@schematics/angular": "~19.2.0",
+    "@schematics/angular": "19.2.0",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
