--- a/apps/angular-demo/project.json
+++ b/apps/angular-demo/project.json
@@ -10,10 +10,10 @@
       "executor": "@angular-devkit/build-angular:application",
       "outputs": ["{options.outputPath}"],
       "options": {
+        "externalDependencies": [""],
         "outputPath": "dist/apps/angular-demo",
         "index": "apps/angular-demo/src/index.html",
         "browser": "apps/angular-demo/src/main.ts",
-        "polyfills": ["zone.js"],
         "tsConfig": "apps/angular-demo/tsconfig.app.json",
         "assets": [
           {
