--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -28,15 +28,18 @@
     "@digdir/designsystemet-css": "1.0.5"
   },
   "peerDependencies": {
-    "@angular-devkit/build-angular": ">=19.0.0",
-    "@angular/animations": ">=19.0.0",
-    "@angular/common": ">=19.0.0",
-    "@angular/compiler-cli": ">=19.0.0",
-    "@angular/compiler": ">=19.0.0",
     "@angular/core": ">=19.0.0",
-    "@angular/language-service": ">=19.0.0",
+    "@angular/common": ">=19.0.0",
     "@angular/platform-browser": ">=19.0.0",
-    "@angular/platform-browser-dynamic": ">=19.0.0",
-    "@angular/platform-server": ">=19.0.0"
+    "@angular/platform-server": ">=19.0.0",
+    "zone.js": "*"
+  },
+  "devDependencies": {
+    "@angular/compiler": "^19.2.0",
+    "@angular/compiler-cli": "^19.2.0",
+    "@angular/core": "^19.2.0",
+    "@angular/platform-browser": "^19.2.0",
+    "@angular/platform-server": "^19.2.0",
+    "vite": "^6.0.0"
   }
 }
