--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -31,8 +31,7 @@
     "@angular/core": ">=19.0.0",
     "@angular/common": ">=19.0.0",
     "@angular/platform-browser": ">=19.0.0",
-    "@angular/platform-server": ">=19.0.0",
-    "zone.js": "*"
+    "@angular/platform-server": ">=19.0.0"
   },
   "devDependencies": {
     "@angular/compiler": "^19.2.0",
