--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@angular/forms": "^19.2.0",
+    "ngxtension": "^5.0.0",
     "@analogjs/vite-plugin-angular": "~1.14.1",
     "@analogjs/vitest-angular": "~1.14.1",
     "@commitlint/cli": "^19.8.0",
