--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -28,8 +28,8 @@
     "@digdir/designsystemet-css": "1.0.5"
   },
   "peerDependencies": {
-    "@angular/core": ">=19.0.0",
     "@angular/common": ">=19.0.0",
+    "@angular/core": ">=19.0.0",
     "@angular/platform-browser": ">=19.0.0",
     "@angular/platform-server": ">=19.0.0"
   },
@@ -39,6 +39,7 @@
     "@angular/core": "^19.2.0",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-server": "^19.2.0",
-    "vite": "^6.0.0"
+    "lightningcss": "^1.30.1",
+    "vite-plugin-css-modules": "^0.0.1"
   }
 }
