--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   },
   "author": "KS Digital",
   "license": "MIT",
-  "packageManager": "pnpm@10.9.0",
+  "packageManager": "pnpm@10.11.1",
   "engines": {
     "node": "22.11.0"
   },
   "devDependencies": {
+    "@analogjs/vite-plugin-angular": "~1.14.1",
+    "@analogjs/vitest-angular": "~1.14.1",
     "@angular/common": "^19.2.0",
+    "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
+    "@angular/forms": "^19.2.0",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "ngxtension": "^5.0.0",
-    "@analogjs/vite-plugin-angular": "~1.14.1",
-    "@analogjs/vitest-angular": "~1.14.1",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@nx/angular": "20.8.1",
