--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -34,6 +34,12 @@
     "@angular/platform-server": ">=19.0.0"
   },
   "devDependencies": {
+    "@angular-eslint/builder": "^19.8.0",
+    "@angular-eslint/bundled-angular-compiler": "^19.8.0",
+    "@angular-eslint/eslint-plugin": "^19.8.0",
+    "@angular-eslint/eslint-plugin-template": "^19.8.0",
+    "@angular-eslint/schematics": "^19.8.0",
+    "@angular-eslint/template-parser": "^19.8.0",
     "lightningcss": "^1.30.1",
     "vite-plugin-css-modules": "^0.0.1"
   }
