--- a/package.json
+++ b/package.json
@@ -11,14 +11,6 @@
     "node": "22.11.0"
   },
   "devDependencies": {
-    "@analogjs/vite-plugin-angular": "~1.14.1",
-    "@analogjs/vitest-angular": "~1.14.1",
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "@angular/platform-browser": "^19.2.0",
-    "@angular/platform-browser-dynamic": "^19.2.0",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@nx/angular": "20.8.1",
@@ -43,10 +35,9 @@
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@typescript-eslint/utils": "^8.19.0",
-    "@vitejs/plugin-react": "^4.2.0",
+    "@vitejs/plugin-react-swc": "^3.9.0",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
-    "angular-eslint": "^19.2.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "2.31.0",
@@ -71,7 +62,5 @@
     ],
     "**/*": "prettier --write --ignore-unknown"
   },
-  "dependencies": {
-    "@vitejs/plugin-react-swc": "^3.9.0"
-  }
+  "dependencies": {}
 }
