--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -40,7 +40,8 @@
     "@angular-eslint/eslint-plugin-template": "^19.8.0",
     "@angular-eslint/schematics": "^19.8.0",
     "@angular-eslint/template-parser": "^19.8.0",
-    "lightningcss": "^1.30.1",
-    "vite-plugin-css-modules": "^0.0.1"
+    "@analogjs/vite-plugin-angular": "~1.14.1",
+    "@analogjs/vitest-angular": "~1.14.1",
+    "angular-eslint": "^19.2.0"
   }
 }
