--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -34,14 +34,16 @@
     "@angular/platform-server": ">=19.0.0"
   },
   "devDependencies": {
+    "@analogjs/vite-plugin-angular": "~1.14.1",
+    "@analogjs/vitest-angular": "~1.14.1",
     "@angular-eslint/builder": "^19.8.0",
     "@angular-eslint/bundled-angular-compiler": "^19.8.0",
     "@angular-eslint/eslint-plugin": "^19.8.0",
     "@angular-eslint/eslint-plugin-template": "^19.8.0",
     "@angular-eslint/schematics": "^19.8.0",
     "@angular-eslint/template-parser": "^19.8.0",
-    "@analogjs/vite-plugin-angular": "~1.14.1",
-    "@analogjs/vitest-angular": "~1.14.1",
+    "@angular/platform-browser-dynamic": "^20.0.3",
+    "@testing-library/angular": "^17.4.0",
     "angular-eslint": "^19.2.0"
   }
 }
