chore: nx migrate latest + manuel bump some deps

--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
-    "@nx/angular": "20.8.1",
-    "@nx/devkit": "20.8.1",
-    "@nx/eslint": "20.8.1",
-    "@nx/eslint-plugin": "^20.8.1",
-    "@nx/js": "20.8.1",
-    "@nx/playwright": "20.8.1",
-    "@nx/react": "^20.8.1",
-    "@nx/vite": "20.8.1",
-    "@nx/web": "20.8.1",
+    "@nx/angular": "21.2.0",
+    "@nx/devkit": "21.2.0",
+    "@nx/eslint": "21.2.0",
+    "@nx/eslint-plugin": "21.2.0",
+    "@nx/js": "21.2.0",
+    "@nx/playwright": "21.2.0",
+    "@nx/react": "21.2.0",
+    "@nx/vite": "21.2.0",
+    "@nx/web": "21.2.0",
     "@pellegrims/nx-remotecache-s3": "^8.1.0",
     "@playwright/test": "^1.36.0",
-    "@schematics/angular": "19.2.0",
+    "@schematics/angular": "20.0.2",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
@@ -47,10 +47,10 @@
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "lint-staged": "^15.5.1",
-    "nx": "20.8.1",
+    "nx": "21.2.0",
     "prettier": "^3.5.3",
     "tslib": "^2.3.0",
-    "typescript": "~5.7.2",
+    "typescript": "5.8.3",
     "typescript-eslint": "^8.31.0",
     "vite": "^6.0.0",
     "vite-plugin-dts": "~4.5.0",
@@ -61,6 +61,5 @@
       "eslint --fix"
     ],
     "**/*": "prettier --write --ignore-unknown"
-  },
-  "dependencies": {}
+  }
 }
