--- a/apps/angular-demo/package.json
+++ b/apps/angular-demo/package.json
@@ -5,18 +5,22 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/platform-browser": "^19.2.0",
-    "@angular/platform-server": "^19.2.0",
+    "@angular/common": "^20.0.3",
+    "@angular/core": "^20.0.3",
+    "@angular/animations": "^20.0.3",
+    "@angular/platform-browser": "^20.0.3",
+    "@angular/platform-server": "^20.0.3",
     "@ks-digital/designsystem-angular": "workspace:*",
     "@ks-digital/designsystem-themes": "workspace:*"
   },
   "devDependencies": {
-    "@analogjs/vite-plugin-angular": "~1.14.1",
-    "@analogjs/vitest-angular": "~1.14.1",
+    "@angular/build": "^20.0.2",
+    "@angular/compiler": "^20.0.3",
+    "@angular/compiler-cli": "^20.0.3",
+    "@angular-devkit/build-angular": "^20.0.2",
+    "@analogjs/vite-plugin-angular": "~1.17.1",
+    "@analogjs/vitest-angular": "~1.17.1",
     "@testing-library/angular": "^17.4.0",
-    "angular-eslint": "^19.2.0"
+    "angular-eslint": "^20.0.0"
   }
 }
