--- a/apps/angular-demo/project.json
+++ b/apps/angular-demo/project.json
@@ -58,7 +58,8 @@
           "buildTarget": "angular-demo:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "continuous": true
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
