--- a/apps/react-demo/package.json
+++ b/apps/react-demo/package.json
@@ -11,8 +11,9 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.6",
-    "@vitejs/plugin-react": "^4.2.0"
+    "@vitejs/plugin-react-swc": "^3.9.0",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
+    "@testing-library/react": "16.1.0"
   }
 }
