--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@ks-digital/designsystem-angular": ["packages/angular/src/index.ts"],
       "@ks-digital/designsystem-react": ["packages/react/src/index.ts"],
       "@ks-digital/designsystem-themes": ["packages/themes/src/index.ts"]
     }
