--- a/package.json
+++ b/package.json
@@ -6,51 +6,47 @@
   },
   "author": "KS Digital",
   "license": "MIT",
-  "packageManager": "pnpm@10.9.0",
+  "packageManager": "pnpm@10.11.1",
   "engines": {
-    "node": "22.11.0"
+    "node": "22.14.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
-    "@nx/devkit": "20.8.1",
-    "@nx/eslint": "20.8.1",
-    "@nx/eslint-plugin": "^20.8.1",
-    "@nx/js": "20.8.1",
-    "@nx/playwright": "20.8.1",
-    "@nx/react": "^20.8.1",
-    "@nx/vite": "20.8.1",
-    "@nx/web": "20.8.1",
+    "@nx/angular": "21.2.0",
+    "@nx/devkit": "21.2.0",
+    "@nx/eslint": "21.2.0",
+    "@nx/eslint-plugin": "21.2.0",
+    "@nx/js": "21.2.0",
+    "@nx/playwright": "21.2.0",
+    "@nx/react": "21.2.0",
+    "@nx/vite": "21.2.0",
+    "@nx/web": "21.2.0",
     "@pellegrims/nx-remotecache-s3": "^8.1.0",
     "@playwright/test": "^1.36.0",
+    "@schematics/angular": "20.0.2",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/dom": "10.4.0",
-    "@testing-library/react": "16.1.0",
     "@types/node": "^20.0.0",
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
-    "@vitejs/plugin-react": "^4.2.0",
+    "@typescript-eslint/utils": "^8.19.0",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-prettier": "^5.2.6",
-    "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "5.0.0",
     "globals": "^16.0.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "lint-staged": "^15.5.1",
-    "nx": "20.8.1",
+    "nx": "21.2.0",
     "prettier": "^3.5.3",
     "tslib": "^2.3.0",
-    "typescript": "~5.7.2",
+    "typescript": "5.8.3",
     "typescript-eslint": "^8.31.0",
     "vite": "^6.0.0",
     "vite-plugin-dts": "~4.5.0",
@@ -61,8 +57,5 @@
       "eslint --fix"
     ],
     "**/*": "prettier --write --ignore-unknown"
-  },
-  "dependencies": {
-    "@vitejs/plugin-react-swc": "^3.9.0"
   }
 }
