--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -15,6 +15,8 @@
   "files": [
     "./dist"
   ],
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "dependencies": {
     "@digdir/designsystemet-css": "1.0.5"
   },
