--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -20,8 +20,15 @@
   "files": [
     "src"
   ],
-  "peerDependencies": {},
   "dependencies": {
     "@digdir/designsystemet-css": "1.0.5"
+  },
+  "devDependencies": {
+    "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
+    "postcss-import": "^16.1.1"
+  },
+  "scripts": {
+    "build": "postcss src/base.css -o src/built/base.css"
   }
 }
