--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "typescript-eslint": "^8.31.0",
     "vite": "^6.0.0",
     "vite-plugin-dts": "~4.5.0",
-    "vitest": "^3.0.0"
+    "vitest": "^3.0.0",
+    "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
+    "postcss-import": "^16.1.1"
   },
   "lint-staged": {
     "**/*.{js,ts,tsx}": [
