chore(themes): add build-step for base-theme

--- a/nx.json
+++ b/nx.json
@@ -61,7 +61,7 @@
   "targetDefaults": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["{projectRoot}/dist"],
+      "outputs": ["{projectRoot}/dist", "{projectRoot}/src/built"],
       "cache": true
     },
     "e2e-ci--**/**": {
