--- a/apps/react-demo/project.json
+++ b/apps/react-demo/project.json
@@ -5,5 +5,22 @@
   "projectType": "application",
   "tags": [],
   "// targets": "to see all targets run: nx show project react-demo --web",
-  "targets": {}
+  "targets": {
+    "build": {
+      "dependsOn": [
+        {
+          "target": "build",
+          "projects": ["@ks-digital/designsystem-themes"]
+        }
+      ]
+    },
+    "serve": {
+      "dependsOn": [
+        {
+          "target": "build",
+          "projects": ["@ks-digital/designsystem-themes"]
+        }
+      ]
+    }
+  }
 }
