--- a/packages/angular/project.json
+++ b/packages/angular/project.json
@@ -15,7 +15,8 @@
         "port": 4400,
         "configDir": "packages/angular/.storybook",
         "browserTarget": "@ks-digital/designsystem-angular:build-storybook",
-        "compodoc": false
+        "compodoc": false,
+        "styles": ["packages/angular/.storybook/styles.css"]
       },
       "configurations": {
         "ci": {
