--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/dom": "10.4.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20.0.0",
     "@typescript-eslint/utils": "^8.19.0",
     "@vitest/coverage-v8": "^3.0.5",
@@ -65,6 +66,5 @@
       "eslint --fix"
     ],
     "**/*": "prettier --write --ignore-unknown"
-  },
-  "dependencies": {}
+  }
 }
