--- a/packages/angular/tsconfig.json
+++ b/packages/angular/tsconfig.json
@@ -24,8 +24,14 @@
   "extends": "../../tsconfig.base.json",
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
-    "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictInjectionParameters": true,
+    "strictTemplates": true,
+    "extendedDiagnostics": {
+      "checks": {
+        "uninvokedFunctionInEventBinding": "error"
+      },
+      "defaultCategory": "error"
+    }
   }
 }
