ci(storybook): build themes first also

--- a/nx.json
+++ b/nx.json
@@ -87,8 +87,7 @@
       "inputs": ["default", "^default"]
     },
     "build-storybook": {
-      "cache": true,
-      "dependsOn": ["^build"]
+      "cache": true
     }
   },
   "generators": {
