--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node": "22.14.0"
   },
   "devDependencies": {
+    "@analogjs/storybook-angular": "^1.18.0",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@nx/angular": "21.2.0",
