chore(angular): move dep to angular package

--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": ">=20.0.0"
   },
   "devDependencies": {
+    "@analogjs/storybook-angular": "^1.18.0",
     "@analogjs/vite-plugin-angular": "~1.17.1",
     "@analogjs/vitest-angular": "~1.17.1",
     "@angular-eslint/builder": "^20.0.0",
