--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "format": "prettier --write .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "build-storybook": "pnpm nx run @ks-digital/designsystem-angular:build-storybook",
+    "chromatic": "npx chromatic --project-token=chpt_086af95d74cc9bd"
   },
   "author": "KS Digital",
   "license": "MIT",
@@ -38,6 +40,7 @@
     "@typescript-eslint/utils": "^8.19.0",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
+    "chromatic": "^13.1.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "2.31.0",
