chore(angular): icon wip

--- a/packages/angular/project.json
+++ b/packages/angular/project.json
@@ -30,7 +30,10 @@
         "outputDir": "dist/storybook/@ks-digital/designsystem-angular",
         "configDir": "packages/angular/.storybook",
         "compodoc": false,
-        "experimentalZoneless": true
+        "experimentalZoneless": true,
+        "loader": {
+          ".svg": "text"
+        }
       },
       "configurations": {
         "ci": {
