--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -43,6 +43,7 @@
     "build": "ng-packagr -p ng-package.json"
   },
   "dependencies": {
-    "@material-symbols/font-400": "^0.34.1"
+    "@angular/material": "^20.1.5",
+    "@material-symbols/svg-400": "^0.34.1"
   }
 }
