--- a/packages/angular/project.json
+++ b/packages/angular/project.json
@@ -30,10 +30,7 @@
         "outputDir": "dist/storybook/@ks-digital/designsystem-angular",
         "configDir": "packages/angular/.storybook",
         "compodoc": false,
-        "experimentalZoneless": true,
-        "loader": {
-          ".svg": "text"
-        }
+        "experimentalZoneless": true
       },
       "configurations": {
         "ci": {
