feat(themes): introduce tailwind base styles (#35)

--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -14,6 +14,7 @@
   "type": "module",
   "exports": {
     "./base.css": "./dist/base.css",
+    "./base.tailwind.css": "./dist/base.tailwind.css",
     "./ledsagerbevis.css": "./dist/themes/ledsagerbevis.css",
     "./forvaltning.css": "./dist/themes/forvaltning.css"
   },
@@ -27,6 +28,6 @@
     "rimraf": "^6.0.1"
   },
   "scripts": {
-    "build": "rimraf dist && postcss src/base.css -o dist/base.css && cp -r src/themes dist/"
+    "build": "./scripts/build.sh"
   }
 }
