chore(angular): storybook depends on build

--- a/nx.json
+++ b/nx.json
@@ -93,6 +93,9 @@
       "dependsOn": ["^build"],
       "outputs": ["{projectRoot}/dist"],
       "cache": true
+    },
+    "storybook": {
+      "dependsOn": ["^build"]
     }
   },
   "generators": {
